refactor: Rename app from 'Private Transaction Tracker' to 'Private Expense Tracker'
- Updated app name in all files
- Changed short name from PTT to PET
- Updated HTML title, meta tags, manifest, and i18n strings

--- a/private-ledger-flow/index.html
+++ b/private-ledger-flow/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Private Transaction Tracker - Encrypted Expense Dashboard</title>
+    <title>Private Expense Tracker - Encrypted Expense Dashboard</title>
     <meta name="description" content="Track your private expenses with Fully Homomorphic Encryption (FHE) and blockchain attestation. Secure, encrypted, and decentralized expense management." />
-    <meta name="author" content="Private Transaction Tracker" />
+    <meta name="author" content="Private Expense Tracker" />
     <meta name="keywords" content="FHE, homomorphic encryption, blockchain, IPFS, expense tracker, privacy, Web3" />
 
-    <meta property="og:title" content="Private Transaction Tracker" />
+    <meta property="og:title" content="Private Expense Tracker" />
     <meta property="og:description" content="Encrypted expense tracking with FHE and blockchain attestation" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
